feat: Add backend server and cargo window fields
Integrates Express.js, body-parser, and cors to establish a backend API server for handling cargo data and market information.

Introduces new fields to the CargoProfile type and Gemini schema for `volumeUnit`, `pricingEndDate`, and date windows (loading and delivery) to capture more detailed cargo information. Updates the default CargoProfile to include these new fields. The AI service is updated to recognize and extract these new window fields.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "recharts": "^3.5.1",
     "mammoth": "1.6.0",
     "framer-motion": "^11.0.8",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "body-parser": "^2.2.1",
+    "express": "^5.2.1",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
